<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_dialog"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    tools:context=".ui.main.view.DeleteDialog"
    android:layout_height="250dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/primary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/delete_message"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnYes"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/yes_delete"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNo"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:backgroundTint="@color/white"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:text="@string/no"/>


    </LinearLayout>
</RelativeLayout>