<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.WelcomeActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/dp150"
        android:src="@drawable/ali_fouad_logo"
        android:layout_height="@dimen/dp150"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp100"/>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:fontFamily="@font/alexandria_bold"
        android:text="@string/welcome"
        android:textColor="@color/primary"
        android:textSize="@dimen/sp30" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="Login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_rect"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtWelcome"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="Register"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rect"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtWelcomeBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_bottom"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/ali_fouad"/>

    </LinearLayout>



</RelativeLayout>