<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.ChangePasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar_layout"/>

    <RelativeLayout
        android:id="@+id/rlCurrentPassword"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rect"
            android:hint="@string/current_password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/ivCurrentPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_eye"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPassword"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/rlCurrentPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rect"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/ivPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_eye"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/rlPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rect"
            android:hint="@string/confirm_password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/ivConfirmPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_eye"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/rlConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_rect_solid"
        android:text="@string/update"
        android:textAlignment="center"
        android:textAllCaps="false" />

</RelativeLayout>