<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.RegisterActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ali_fouad_logo" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:fontFamily="@font/alexandria_bold"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textSize="@dimen/sp30" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/txtRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_rect"
        android:hint="Full Name"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:id="@+id/rlPhone"
        android:layout_below="@id/edtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rect"
            android:hint="55994435"
            android:inputType="phone"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <com.haipq.android.flagkit.FlagImageView
            android:id="@+id/flagView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/rlPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rect"
        android:hint="Email Address"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <RelativeLayout
        android:id="@+id/rlPassword"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rect"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/ivPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_eye"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/rlPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rect"
            android:hint="@string/current_password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/ivConfirmPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_eye"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/rlConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_rect_solid"
        android:text="Register"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtAlreadyAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Already have an account? "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/txtLogin"
            android:text="Login"/>

    </LinearLayout>


</RelativeLayout>